Fis: Unit tests should send JOB_BASE_NAME instead of JOB_NAME. Moving Y and P builds and tests to a new folder so that we can only add those jobs when we need them.